fixed bottom spacing on posts

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -8,7 +8,7 @@
 .post {
   display: flex;
   border-top: 2px solid black;
-  margin-bottom: 5vmin;
+  /* margin-bottom: 5vmin; */
 }
 
 .review-photo {
@@ -23,10 +23,15 @@ img {
 
 .review-text {
   margin-top: 5vmin;
+  /* margin-bottom: 5vmin; */
 }
 
 .review-text header {
-  font-weight: bold
+  font-weight: bold;
+}
+
+.review-text > p {
+  margin-bottom: 4vmin;
 }
 
 h2 {
